--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
       },
       "scripts": {
           "dev": "vite",
-          "build": "vite build",
+          "build": "vite build --base=./",
           "preview": "vite preview",
           "postinstall": "chmod +x node_modules/.bin/vite"
       }
